--- a/animacao-css/style.css
+++ b/animacao-css/style.css
@@ -1,8 +1,55 @@
 body{
-    
-    background-color: black;
+    margin: 20px;
+    background: #f7f7f7;
 }
+#ativar{
+    font-size: 1rem;
+    border: none;
+    background-clip: border-box;
+    padding: auto;
+    display: block;
+    margin: 20px auto;
+    color :green
+    
+    
+    
+   
+    
+}
+#modal{
+    padding: 30px;
+    background: white;
+    border-radius: 4px;
+    box-shadow: 1 4px rgba(0,0,0,.1);
+    max-width: 400px;
+    margin: 20px auto;
+}
+#modal h1{
+    font-family: sans-serif;
+    margin: 0px 0px 20px;
+}
+#modal label{
+    display: block;
+    font-family: sans-serif;
+    margin: 5px;
+    margin-top: 10px;
+}
+#modal input{
+    width: 100%;
+    border-radius: 4px;
+    border: 1px solid #ddd;
+    padding: .5rem;
+    font-size: 1rem;
+    background: rgba(173, 166, 166, 0.1);
+}
+#modal button{
+    margin-top: 30px;
+    display: block;
+    font-family: sans-serif;
+    font-size: 1rem;
+    padding:.6rem 2rem ;
+    border: none;
+    background: #ffb801;
+    color: #402d00;
 
-#modal {
- background-color:blue ;
 }
